--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     background-color: #f9f9f9;
-    margin: 0;
+    margin: auto;
     padding: 30px;
 }
 
@@ -14,7 +14,7 @@ body{
     box-shadow: 0 0 15px rgb(0, 0, 0, 0.1);
 }
 
-h2 {
+h1 {
     display: block;
     margin-top: 5px;
     font-weight: bold;
